2017-09-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/Makefile: Rename from src/Makefile.in (as done in gnuk).

2017-09-01  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.c (crc32_reset, crc32_step, crc32_get): Move CRC32
	routines from main.c.
	(ep_fill_initial_string, ep_process, neug_init): Use them.

2017-08-31  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (crc32_reset, crc32_step, crc32_get): New.
	(download_check_crc32): Use new CRC32 routine.

2017-08-02  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c: Support GNU/Linux target.
	* src/neug.c: Support GNU/Linux target.

2017-08-01  NIIBE Yutaka  <gniibe@fsij.org>

	* src/Makefile.in: Support GNU/Linux target.
	* src/configure: Support GNU/Linux target.

2017-08-01  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Support build without git.

2016-10-17  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.5.

2016-10-14  Niibe Yutaka  <gniibe@fsij.org>

	* tool/collect-neug-output.sh: New.

2016-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* tool/intel_hex.py, tool/hub_ctrl.py: Update from Gnuk.

	* chopstx: Update to 1.2.

2016-07-15  Kenji Rikitake  <kenji@k2r.org>

	* src/main.c (main): Fix call of chopstx_poll to follow
	API change of Chopstx 1.1.

2016-07-13  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.c (neug_init): Apply change for STACK_ADDR_* from Gnuk.
	* src/main.c (main): Likewise.

2016-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__process2_stack_size__): Smaller value.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__process3_stack_size__): Larger value.

	* fraucheky: Update to 0.4.

	* src/main.c (usb_ctrl_write_finish): Support
	MSC_MASS_STORAGE_RESET_COMMAND.

	* tool/neug_check.py (main): "Board" is optional.
	Reported by Kenji Rikitake.

	* src/configure: Fix use_sys3 variable substitution.

2016-06-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c: Update with new USB API.

2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>
