@@ -6,37 +6,31 @@ PROJECT = neug
 CHOPSTX = ../chopstx
 FRAUCHEKY = ../fraucheky
 
-# Define linker script file here
-LDSCRIPT= @LDSCRIPT@
-
 CSRC = main.c sha256.c neug.c
-CHIP=@CHIP@
-USE_SYS = @USE_SYS@
+
+include config.mk
+
 USE_USB = yes
 USE_ADC = yes
-EMULATION=@EMULATION@
 
-@ENABLE_FRAUCHEKY@include $(FRAUCHEKY)/src.mk
-
-@HEXOUTPUT_MAKE_OPTION@
+ifneq ($(ENABLE_FRAUCHEKY),)
+include $(FRAUCHEKY)/src.mk
+endif
 
 ###################################
-CROSS = @CROSS@
 CC   = $(CROSS)gcc
 LD   = $(CROSS)gcc
 OBJCOPY   = $(CROSS)objcopy
 
-MCU   = @MCU@
 CWARN = -Wall -Wextra -Wstrict-prototypes
-# DEFS: Add  
-DEFS  = @USE_SYS3@ @DEF_EMULATION@
 OPT   = -O3 -Os -g
-LIBS  = @LIBS@
 
 #######################
 include $(CHOPSTX)/rules.mk
 
-@ENABLE_FRAUCHEKY@include $(FRAUCHEKY)/build.mk
+ifneq ($(ENABLE_FRAUCHEKY),)
+include $(FRAUCHEKY)/build.mk
+endif
 ###################################
 
 board.h:
@@ -47,5 +41,5 @@ build/sha256.o: OPT = -O3 -g
 build/neug.o: OPT = -O3 -g
 
 distclean:: clean
-	-rm -f neug.ld config.h board.h Makefile \
+	-rm -f neug.ld config.h board.h config.mk \
 	       usb-strings.c.inc usb-vid-pid-ver.c.inc
